--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,21 +9,21 @@ description = "Planet visualization"
 repository  = "https://github.com/AlexApps99/stardome"
 
 [dependencies.gl]
-version     = "0.14"
+version     = "0.14.0"
 
 [dependencies.glam]
-version     = "0.9"
+version     = "0.11.0"
 
 [dependencies.imgui]
-version     = "0.4"
+version     = "0.5.0"
 optional    = true
 
 [dependencies.imgui-opengl-renderer]
-version     = "0.8"
+version     = "0.9.0"
 optional    = true
 
 [dependencies.imgui-sdl2]
-version     = "0.11"
+version     = "0.12.0"
 optional    = true
 
 [dependencies.png]
@@ -32,6 +32,9 @@ default-features = false
 
 [dependencies.sdl2]
 version     = "0.34.3"
+
+[dependencies.sgp4]
+version     = "0.4.0"
 
 [features]
 default     = []
