--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ version     = "0.14.0"
 [dependencies.glam]
 version     = "0.11.0"
 
+[dependencies.image]
+version     = "0.23.12"
+default-features = false
+features    = ["png"]
+
 [dependencies.imgui]
 version     = "0.5.0"
 optional    = true
@@ -25,10 +30,6 @@ optional    = true
 [dependencies.imgui-sdl2]
 version     = "0.12.0"
 optional    = true
-
-[dependencies.png]
-version     = "0.4.1"
-default-features = false
 
 [dependencies.sdl2]
 version     = "0.34.3"
