--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ repository  = "https://github.com/AlexApps99/stardome"
 version     = "0.14.0"
 
 [dependencies.glam]
-version     = "0.11.0"
+version     = "0.11.2"
 
 [dependencies.image]
 version     = "0.23.12"
@@ -36,6 +36,9 @@ version     = "0.34.3"
 
 [dependencies.sgp4]
 version     = "0.4.0"
+
+[dependencies.sofa-sys]
+version     = "2020.7.21-beta.1"
 
 [features]
 default     = []
