--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,15 +20,15 @@ default-features = false
 features    = ["png"]
 
 [dependencies.imgui]
-version     = "0.5.0"
+version     = "0.6.0"
 optional    = true
 
 [dependencies.imgui-opengl-renderer]
-version     = "0.9.0"
+version     = "0.10.0"
 optional    = true
 
 [dependencies.imgui-sdl2]
-version     = "0.12.0"
+version     = "0.13.0"
 optional    = true
 
 [dependencies.sdl2]
@@ -41,5 +41,7 @@ version     = "0.4.0"
 version     = "2020.7.21-beta.1"
 
 [features]
-default     = []
+# TODO make the debug feature toggle the debug OpenGL stuff
+default     = ["debug", "gui"]
+debug       = []
 gui         = ["imgui", "imgui-opengl-renderer", "imgui-sdl2"]
