--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,12 @@ features    = ["png"]
 
 [dependencies.imgui]
 version     = "0.6.0"
-optional    = true
 
 [dependencies.imgui-opengl-renderer]
 version     = "0.10.0"
-optional    = true
 
 [dependencies.imgui-sdl2]
 version     = "0.13.0"
-optional    = true
 
 [dependencies.sdl2]
 version     = "0.34.3"
@@ -42,6 +39,7 @@ version     = "2020.7.21-beta.1"
 
 [features]
 # TODO make the debug feature toggle the debug OpenGL stuff
-default     = ["debug", "gui"]
+# Consider bringing back imgui as a feature
+# But only once it's implemented
+default     = ["debug"]
 debug       = []
-gui         = ["imgui", "imgui-opengl-renderer", "imgui-sdl2"]
