The Big Cheese Refactorstravaganzanator 2000 Some cleanup needed ;)

--- a/stardome/Cargo.toml
+++ b/stardome/Cargo.toml
@@ -34,6 +34,11 @@ version     = "0.34.3"
 [dependencies.sputils]
 path        = "../sputils/"
 
+[dependencies.rspice]
+# not smart
+default-features = false
+path        = "../../cspice/rspice/"
+
 #[dependencies.sofa-sys]
 #version     = "2020.7.21-beta.1"
 
