--- a/stardome/Cargo.toml
+++ b/stardome/Cargo.toml
@@ -8,6 +8,9 @@ publish     = false
 description = "Planet visualization"
 repository  = "https://github.com/ZoussCity/stardome"
 
+[dependencies.cfg-if]
+version     = "1.0.0"
+
 [dependencies.gl]
 version     = "0.14.0"
 
@@ -45,3 +48,4 @@ path        = "../../cspice/rspice/"
 # But only once it's implemented
 default     = ["debug"]
 debug       = []
+gles        = []
